added js lines of code,

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,7 @@ body{
 }
 
 .container{
-    background-color: rgb(112, 112, 248);
+    background-color: rgb(241, 100, 100);
     min-height: 100px;
     width: 520px;
     margin: 100px auto;
@@ -51,7 +51,7 @@ body{
     text-align: left;
     font-family: normal; 
     letter-spacing: 0.5px;
-    color:rgb(248, 112, 214);
+    color:yellow;
     word-spacing: 2.7px;
 }
 
@@ -65,6 +65,32 @@ input[type=text]{
     color: #1073d0;
     font-size: 17px;
     padding: 12px;
+}
+
+input[type=text]:focus{
+    background: #bababa;
+    border: 2px solid yellow;
+    
+}
+
+input[type=button]{
+    width:150px;
+    margin-left: 35%;
+    margin-top: 40px;
+    outline; none;
+    border: none;
+    border-radius: 2px;
+    background-color: rgb(45, 59, 5);
+    padding: 14px 16px;
+    color:antiquewhite;
+    font-size: 17px;
+
+}
+
+input[type=button]:hover{
+    background-color: brown;
 
 
 }
+
+
